syntax = "proto3";

package mcp;

import "google/protobuf/struct.proto";

option go_package = "grpc2mcp/pb";

// ----------------------------------------------------------------
// Service Definition
// ----------------------------------------------------------------

service ModelContextProtocol {
    // Tools
    rpc CallTool(CallToolRequest) returns (CallToolResult);
    rpc ListTools(ListToolsRequest) returns (ListToolsResult);
    rpc WatchToolList(WatchToolListRequest) returns (stream ToolListChangedNotification);
}


// ----------------------------------------------------------------
// Tool Messages
// ----------------------------------------------------------------

message CallToolRequest {
  string name = 1;
  optional google.protobuf.Struct arguments = 2;
  optional google.protobuf.Struct _meta = 3;
}

message CallToolResult {
  repeated ContentBlock content = 1;
  optional google.protobuf.Struct structured_content = 2;
  optional bool is_error = 3;
  optional google.protobuf.Struct _meta = 4;
}

message ListToolsRequest {
    optional string cursor = 1;
    optional google.protobuf.Struct _meta = 2;
}

message ListToolsResult {
    repeated Tool tools = 1;
    optional string next_cursor = 2;
    optional google.protobuf.Struct _meta = 3;
}

message WatchToolListRequest {}

message ToolListChangedNotification {}

message Tool {
  BaseMetadata metadata = 1;
  optional string description = 2;
  google.protobuf.Struct input_schema = 3;
  optional google.protobuf.Struct output_schema = 4;
  optional ToolAnnotations annotations = 5;
  optional google.protobuf.Struct _meta = 6;
}

message ToolAnnotations {
  optional string title = 1;
  optional bool read_only_hint = 2;
  optional bool destructive_hint = 3;
  optional bool idempotent_hint = 4;
  optional bool open_world_hint = 5;
}


// ----------------------------------------------------------------
// Content Block and related messages
// ----------------------------------------------------------------

message ContentBlock {
  oneof content_type {
    TextContent text = 1;
    ImageContent image = 2;
    AudioContent audio = 3;
    ResourceLink resource_link = 4;
    EmbeddedResource embedded_resource = 5;
  }
}

message TextContent {
  string text = 1;
  optional Annotations annotations = 2;
  optional google.protobuf.Struct _meta = 3;
}

message ImageContent {
  bytes data = 1;
  string mime_type = 2;
  optional Annotations annotations = 3;
  optional google.protobuf.Struct _meta = 4;
}

message AudioContent {
  bytes data = 1;
  string mime_type = 2;
  optional Annotations annotations = 3;
  optional google.protobuf.Struct _meta = 4;
}

message ResourceLink {
  Resource resource = 1;
}

message EmbeddedResource {
  oneof resource_contents {
    TextResourceContents text_resource = 1;
    BlobResourceContents blob_resource = 2;
  }
  optional Annotations annotations = 3;
  optional google.protobuf.Struct _meta = 4;
}


// ----------------------------------------------------------------
// Resource and related messages
// ----------------------------------------------------------------

message Resource {
  BaseMetadata metadata = 1;
  string uri = 2;
  optional string description = 3;
  optional string mime_type = 4;
  optional Annotations annotations = 5;
  optional int64 size = 6;
  optional google.protobuf.Struct _meta = 7;
}

message TextResourceContents {
  string uri = 1;
  optional string mime_type = 2;
  string text = 3;
  optional google.protobuf.Struct _meta = 4;
}

message BlobResourceContents {
  string uri = 1;
  optional string mime_type = 2;
  bytes blob = 3;
  optional google.protobuf.Struct _meta = 4;
}


// ----------------------------------------------------------------
// Common messages
// ----------------------------------------------------------------

message BaseMetadata {
  string name = 1;
  optional string title = 2;
}

message Annotations {
  repeated Role audience = 1;
  optional float priority = 2;
  optional string last_modified = 3;
}

enum Role {
  ROLE_UNSPECIFIED = 0;
  USER = 1;
  ASSISTANT = 2;
}
